# commerce-agent

./: .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml
.github/: CODEOWNERS
agents/: __init__.py  competitor_analysis_agent.py  content_audit_agent.py  content_generation_agent.py  models.py  orchestrator.py
api/: __init__.py  main.py  schemas.py
api/routes/: __init__.py  audit.py  metrics.py  optimize.py
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/api/: agents.rst  api.rst  config.rst  evaluation.rst  llm.rst  mcp_servers.rst  observability.rst  rag.rst  scripts.rst
evaluation/: __init__.py  content_scorer.py  human_feedback.py
llm/: __init__.py  anthropic_provider.py  base.py  factory.py  huggingface_provider.py  ollama_provider.py  openai_provider.py
mcp_servers/: __init__.py  catalog_mcp_server.py  retailer_mcp_server.py  scoring_mcp_server.py
mcp_servers/mock_data/: competitor_data.json  listings.json  retailer_requirements.json
observability/: __init__.py  cost_tracker.py  guardrails.py  tracing.py
rag/: __init__.py  embeddings.py  ingestion.py  retrieval.py
rag/documents/: amazon_style_guide.txt  walmart_content_guide.txt
rag/documents/category_requirements/: electronics.txt
scripts/: __init__.py  init_db.py
tests/: __init__.py  conftest.py  test_agents.py  test_evaluation.py  test_mcp_servers.py  test_observability.py  test_orchestrator.py  test_providers.py  test_rag.py
ui/: app.py
