[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commerceagent"
version = "1.0.0"
description = "Production-grade agentic AI platform for e-commerce content optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sarala Biswal"}
]
maintainers = [
    {name = "Sarala Biswal"}
]

dependencies = [
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "huggingface-hub>=0.25.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "ollama>=0.3.0",

    # Orchestration
    "langgraph>=0.2.40",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",

    # RAG
    "chromadb>=0.5.0",
    "sentence-transformers>=3.2.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # MCP
    "mcp>=1.0.0",

    # UI
    "streamlit>=1.40.0",
    "plotly>=5.24.0",

    # Observability
    "langsmith>=0.1.140",

    # Data & utilities
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "textstat>=0.7.4",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
